# Photography-sorter

./: README.md  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-22-photo-culling-cli.md
docs/superpowers/specs/: 2026-06-22-photo-culling-cli-design.md
src/photo_cull_ai/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core_jsonl.py  test_core_ollama.py  test_core_processing.py  test_packaging.py  test_startup.py
