[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-cull-ai"
version = "0.1.0"
description = "Non-destructive AI photo culling CLI for RAW files and local Ollama models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "ollama",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
photo-cull-ai = "photo_cull_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
